<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/screen2entry"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:clickable="true"
        card_view:cardCornerRadius="4dp"
        android:focusable="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/date2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/date"
                android:textSize="12sp"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:text="@string/title"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold"
                android:maxLines="2"
                card_view:layout_constraintTop_toBottomOf="@id/date2"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/description2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                card_view:layout_constraintTop_toBottomOf="@id/title2"
                android:maxLines="1"
                android:ellipsize="end"
                tools:ignore="MissingConstraints" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
